// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MeetingRow (collapsed) > matches snapshot in collapsed state 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="has-aria-expanded:bg-muted border-b transition-colors hover:bg-muted data-[state=selected]:bg-muted"
        data-slot="table-row"
      >
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
          data-slot="table-cell"
        >
          Jun 1, 2099
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
          data-slot="table-cell"
        >
          <a
            class="hover:underline"
            href="/representatives/R000001"
          >
            Jane Rep
          </a>
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
          data-slot="table-cell"
        >
          Jane Rep
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
          data-slot="table-cell"
        >
          Global Health
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
          data-slot="table-cell"
        >
          Alice Lead
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
          data-slot="table-cell"
        >
          Jun 15, 2099
        </td>
        <td
          class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
          data-slot="table-cell"
        >
          <button
            aria-expanded="false"
            aria-label="Expand meeting with Jane Rep"
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-9 w-9"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down h-4 w-4 transition-transform"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`MeetingsSection > matches snapshot empty state 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="past-meetings"
  >
    <h2
      class="mb-3 text-2xl font-bold"
      id="past-meetings"
    >
      Past Meetings
    </h2>
    <p
      class="py-8 text-center text-muted-foreground"
    >
      No meetings found.
    </p>
  </section>
</DocumentFragment>
`;

exports[`MeetingsSection > matches snapshot with meetings 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="upcoming-meetings"
  >
    <h2
      class="mb-3 text-2xl font-bold"
      id="upcoming-meetings"
    >
      Upcoming Meetings
    </h2>
    <div
      class="relative w-full overflow-x-auto rounded-md border"
      data-slot="table-container"
    >
      <table
        class="w-full caption-bottom text-sm [&_td:first-child]:pl-4 [&_td:last-child]:pr-4 [&_th:first-child]:pl-4 [&_th:last-child]:pr-4"
        data-slot="table"
      >
        <caption
          class="sr-only"
        >
          Upcoming Meetings
        </caption>
        <thead
          class="[&_th]:text-primary-foreground [&_tr]:border-b [&_tr]:bg-primary [&_tr]:hover:bg-primary"
          data-slot="table-header"
        >
          <tr
            class="has-aria-expanded:bg-muted border-b transition-colors hover:bg-muted data-[state=selected]:bg-muted"
            data-slot="table-row"
          >
            <th
              class="h-10 whitespace-nowrap px-2 text-left align-middle font-medium text-foreground [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              data-slot="table-head"
            >
              Date
            </th>
            <th
              class="h-10 whitespace-nowrap px-2 text-left align-middle font-medium text-foreground [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              data-slot="table-head"
            >
              Member of Congress
            </th>
            <th
              class="h-10 whitespace-nowrap px-2 text-left align-middle font-medium text-foreground [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              data-slot="table-head"
            >
              Staff Contact
            </th>
            <th
              class="h-10 whitespace-nowrap px-2 text-left align-middle font-medium text-foreground [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              data-slot="table-head"
            >
              PIH Team
            </th>
            <th
              class="h-10 whitespace-nowrap px-2 text-left align-middle font-medium text-foreground [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              data-slot="table-head"
            >
              Scheduling Lead
            </th>
            <th
              class="h-10 whitespace-nowrap px-2 text-left align-middle font-medium text-foreground [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              data-slot="table-head"
            >
              Follow-up
            </th>
            <th
              class="h-10 whitespace-nowrap px-2 text-left align-middle font-medium text-foreground [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] w-10"
              data-slot="table-head"
            >
              <span
                class="sr-only"
              >
                Actions
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          class="[&_tr:last-child]:border-0"
          data-slot="table-body"
        >
          <tr
            class="has-aria-expanded:bg-muted border-b transition-colors hover:bg-muted data-[state=selected]:bg-muted"
            data-slot="table-row"
          >
            <td
              class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              data-slot="table-cell"
            >
              Jun 1, 2099
            </td>
            <td
              class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              data-slot="table-cell"
            >
              <a
                class="hover:underline"
                href="/representatives/R000001"
              >
                Jane Rep
              </a>
            </td>
            <td
              class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              data-slot="table-cell"
            >
              Jane Rep
            </td>
            <td
              class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              data-slot="table-cell"
            >
              —
            </td>
            <td
              class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              data-slot="table-cell"
            >
              —
            </td>
            <td
              class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              data-slot="table-cell"
            >
              —
            </td>
            <td
              class="whitespace-nowrap p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
              data-slot="table-cell"
            >
              <button
                aria-expanded="false"
                aria-label="Expand meeting with Jane Rep"
                class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-9 w-9"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-down h-4 w-4 transition-transform"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </section>
</DocumentFragment>
`;
